Update page to show rooms and quizzes

--- a/public/index.html
+++ b/public/index.html
@@ -6,36 +6,13 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div id="devices">
-        <button id="add-device">Add Device</button>
-        <smart-device id="device"></smart-device>
+    <div id="rooms">
+        <button id="add-room">Add Room</button>
+        <div id="room-list"></div>
     </div>
-    <div id="users">
-        <button id="add-user">Add User</button>
-        <smart-user name="Ryan White" teacher></smart-user>
-        <smart-user name="John Doe"></smart-user>
-        <smart-user name="Jane Doe"></smart-user>
-    </div>
-    <div id="questions">
-        <button id="add-question">Add Question</button>
-        <smart-question>
-            <p slot="question">What is the capital of France?</p>
-            <p slot="option">Paris</p>
-            <p slot="option">London</p>
-            <p slot="option">Berlin</p>
-        </smart-question>
-        <smart-question>
-            <p slot="question">What is the capital of Germany?</p>
-            <p slot="option">Paris</p>
-            <p slot="option">London</p>
-            <p slot="option">Berlin</p>
-        </smart-question>
-        <smart-question>
-            <p slot="question">What is the capital of England?</p>
-            <p slot="option">Paris</p>
-            <p slot="option">London</p>
-            <p slot="option">Berlin</p>
-        </smart-question>
+    <div id="quizzes">
+        <button id="add-quiz">Add Quiz</button>
+        <div id="quiz-list"></div>
     </div>
     <script src="index.js" type="module"></script>
 </body>
