--- a/app/public/smart-device.html
+++ b/app/public/smart-device.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Smart Device Example</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
 </head>
 <body>
     <smart-device debug></smart-device>
