Remove logic from main page

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -4,16 +4,10 @@
     <meta charset="UTF-8">
     <title>ESP32S3 Web Serial Example</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
-    <div id="rooms">
-        <button id="add-room">Add Room</button>
-        <div id="room-list"></div>
-    </div>
-    <div id="quizzes">
-        <button id="add-quiz">Add Quiz</button>
-        <div id="quiz-list"></div>
-    </div>
-    <script src="index.js" type="module"></script>
+    <a href="classes.html">Classes</a>
+    <a href="tests.html">Tests</a>
 </body>
 </html>
