Remove debug output on class page

--- a/app/public/classes.html
+++ b/app/public/classes.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h2><a href="index.html">Home</a></h2>
-    <smart-rooms id="rooms" uuid="room" debug text="Classes" type="class" fixed active></smart-rooms>
+    <smart-rooms id="rooms" uuid="room" text="Classes" type="class" fixed active></smart-rooms>
     <script src="classes.js" type="module"></script>
     <script>
         if ('serviceWorker' in navigator) {
